# rules_aws

./: .bazelrc  .bazelversion  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.corporate  MODULE.bazel  README.md  WORKSPACE.bazel
.aspect/workflows/: config.yaml
.bcr/: metadata.template.json  source.template.json
.github/workflows/: BUILD.bazel  ci-vanilla-bazel.yaml  ci-workflows.yaml  ci.yaml  publish.yaml  release.yaml  release.yml  release_prep.sh  tag.yaml
aws/: BUILD.bazel  __main__.py  defs.bzl  extensions.bzl  repositories.bzl  repositories.oci.bzl  toolchain.bzl
aws/private/: BUILD.bazel  py_lambda.bzl  requirements.aws.txt  requirements.txt  resolved_toolchain.bzl  s3_sync.bzl  s3_sync.sh  toolchains_repo.bzl  versions.bzl
aws/private/patches/: aws_cli.patch
aws/tests/: versions_test.bzl
docs/: BUILD.bazel  rules.md
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
examples/cli/: BUILD.bazel
examples/python_lambda/: BUILD.bazel  README.md  lambda_function.py  requirements.in  requirements.txt
examples/python_lambda/test/: BUILD.bazel  container_structure_test.yaml  integration_test.py
examples/release_to_s3/: BUILD.bazel  my_file.txt
examples/s3/sync/: BUILD.bazel
