load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("//aws:repositories.bzl", "aws_register_toolchains")

http_archive(
    name = "rules_python",
    sha256 = "0a8003b044294d7840ac7d9d73eef05d6ceb682d7516781a4ec62eeb34702578",
    strip_prefix = "rules_python-0.24.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.24.0/rules_python-0.24.0.tar.gz",
)

http_archive(
    name = "bazel_skylib",
    sha256 = "de9d2cedea7103d20c93a5cc7763099728206bd5088342d0009315913a592cc0",
    strip_prefix = "bazel-skylib-1.4.2",
    urls = ["https://github.com/bazelbuild/bazel-skylib/archive/refs/tags/1.4.2.tar.gz"],
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")
load("@rules_python//python/pip_install:repositories.bzl", "pip_install_dependencies")

py_repositories()

python_register_toolchains(
    name = "python3",
    python_version = "3.10",
)

load("@python3//:defs.bzl", "interpreter")

pip_install_dependencies()

aws_register_toolchains(
    name = "arbitrary",
    aws_version = "1.14.2",
    register = False,
)

load("@aws_cli//:requirements.bzl", _aws_install_deps = "install_deps")

_aws_install_deps(python_interpreter_target = interpreter)
