load("@aspect_bazel_lib//:bzl_library.bzl", "bzl_library")
load("//aws/private:resolved_toolchain.bzl", "resolved_toolchain")

# This is the target rule authors should put in their "toolchains"
# attribute in order to get a runtime for the correct platform.
# See https://docs.bazel.build/versions/main/toolchains.html#writing-rules-that-use-toolchains
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

resolved_toolchain(
    name = "resolved_toolchain",
    # Marked manual so that `bazel test //...` passes
    # even if no toolchain is registered.
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//aws/private:py_lambda",
        "//aws/private:s3_sync",
        "@rules_oci//oci:defs",
        "@rules_python//python:defs_bzl",
        "@tar.bzl//:tar",
    ],
)

bzl_library(
    name = "repositories.oci",
    srcs = ["repositories.oci.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@rules_oci//oci:pull"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
)
