load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//aws:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//aws:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//aws:__subpackages__"],
)

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.aws.txt",
    requirements_txt = "requirements.txt",
)
