load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//aws:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//aws:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//aws:__subpackages__"],
)

bzl_library(
    name = "py_lambda",
    srcs = [
        "py_lambda.bzl",
        "@rules_pkg//pkg:bzl_srcs",
    ],
    visibility = ["//aws:__subpackages__"],
)
