load("@aspect_bazel_lib//:bzl_library.bzl", "bzl_library")

exports_files(["s3_sync.sh"])

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//aws:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//aws:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//aws:__subpackages__"],
)

bzl_library(
    name = "py_lambda",
    srcs = [
        "py_lambda.bzl",
        "@aspect_bazel_lib//lib:tar",
    ],
    visibility = ["//aws:__subpackages__"],
)

bzl_library(
    name = "s3_sync",
    srcs = ["s3_sync.bzl"],
    visibility = ["//aws:__subpackages__"],
)
