bazel_dep(name = "aspect_rules_aws", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)

local_path_override(
    module_name = "aspect_rules_aws",
    path = "../..",
)

aws = use_extension("@aspect_rules_aws//aws:extensions.bzl", "aws")
use_repo(aws, "aws")
