# Override http_archive for local testing
local_repository(
    name = "aspect_rules_aws",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_aws setup #
######################
# Fetches the rules_aws dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@aspect_rules_aws//aws:repositories.bzl", "rules_aws_dependencies")

rules_aws_dependencies()
