load("@aspect_bazel_lib//lib:testing.bzl", "assert_contains")

# Demonstrates that you can use the CLI in a genrule.
# The toolchain provides a "Make variable" named AWS_CLI_BIN that you can expand.
genrule(
    name = "help",
    srcs = [],
    outs = ["help.txt"],
    cmd = "$(AWS_CLI_BIN) help > $@",
    toolchains = ["@aspect_rules_aws//aws:resolved_toolchain"],
)

assert_contains(
    name = "help_test",
    actual = "help.txt",
    expected = "aws [options] <command> <subcommand> [parameters]",
)
