load("@aspect_rules_py//py:defs.bzl", "py_test")
load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@pip//:requirements.bzl", "requirement")

# Verify we built a container with files in expected locations
container_structure_test(
    name = "smoke_test",
    configs = ["container_structure_test.yaml"],
    driver = "tar",
    image = "//examples/python_lambda:tarball",
)

py_test(
    name = "integration_test",
    size = "small",
    srcs = ["integration_test.py"],
    data = ["//examples/python_lambda:tarball"],
    pytest_main = True,
    tags = [
        "requires-docker",
        "requires-network",
    ],
    deps = [
        requirement("docker"),
        requirement("pytest"),
        requirement("requests"),
        requirement("testcontainers"),
    ],
)
